<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_red_24dp"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_blood_request"
        android:icon="@drawable/request"
        android:title="@string/navigation_blood_request" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/navigation_settings"/>

    <item
        android:id="@+id/navigation_donors"
        android:icon="@mipmap/donors_icon"
        android:title="@string/navigation_donors"/>

    <item
        android:id="@+id/navigation_top20"
        android:icon="@mipmap/top_20_icon"
        android:title="@string/navigation_top20"/>

</menu>
