<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@color/lightWhite"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/alert_search_option_get_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_search_option_get_title_textView"
        android:textColor="@color/toolBarColor"
        android:textSize="19sp"/>

    <RadioButton
        android:id="@+id/radio_your_need"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_your_need"/>

    <RadioButton
        android:id="@+id/radio_some_one_need"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_some_one_need"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_search_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/toolBarColor"
        android:padding="12dp"
        android:text="@string/button_search_next"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/white" />

</LinearLayout>
