<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".view.UserRegistration">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_user_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_user_additional_details_additionalDetails_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/fragment_user_additional_details_additionalDetails_textView"
            android:textSize="25sp"
            android:textColor="@color/toolBarColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fragment_user_additional_details_submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/btn"
            android:text="@string/fragment_user_additional_details_submit_button"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dob" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="13dp"
            android:text=""
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_user_additional_details_skip_textView" />

        <TextView
            android:id="@+id/fragment_user_additional_details_occupation_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/fragment_user_additional_details_occupation_textView"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_additional_details_additionalDetails_textView" />

        <RadioButton
            android:id="@+id/fragment_user_additional_details_student_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_user_additional_details_student_radioButton"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_additional_details_occupation_textView" />

        <RadioButton
            android:id="@+id/fragment_user_additional_details_working_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_user_additional_details_working_radioButton"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_additional_details_student_radioButton"
            />

        <RadioButton
            android:id="@+id/fragment_user_additional_details_others_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/fragment_user_additional_details_others_radioButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_user_additional_details_working_radioButton" />

        <EditText
            android:id="@+id/fragment_user_additional_details_othersMentionHere_editText"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/fragment_user_additional_details_othersMentionHere_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_additional_details_others_radioButton" />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="23dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_additional_details_othersMentionHere_editText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_user_additional_details_phoneNumberOptional_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/fragment_user_additional_details_phoneNumberOptional_editText"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/toolBarColor"
                android:textSize="20sp"
                android:theme="@style/MyEditTextTheme" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="23dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstname">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_user_additional_details_emailOptional_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/fragment_user_additional_details_emailOptional_editText"
                android:inputType="textPersonName"
                android:textColorHint="@color/toolBarColor"
                android:textSize="20sp"
                android:theme="@style/MyEditTextTheme" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="23dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="23dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastname">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_user_additional_details_socialProfileOptional_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_user_additional_details_socialProfileOptional_editText"
                android:inputType="textPersonName"
                android:textColorHint="@color/toolBarColor"
                android:textSize="20sp"
                android:theme="@style/MyEditTextTheme" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/fragment_user_additional_details_skip_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:clickable="true"
            android:text="@string/fragment_user_additional_details_skip_textView"
            android:textSize="21sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_additional_details_submit_button" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>