<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/image_and_content_sliding_constraintLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/image_and_content_sliding_constraintLayout2">

        <ImageView
            android:id="@+id/flag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#000000"
            android:padding="1dp"
            android:src="@drawable/profile_image" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/image_and_content_sliding_constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_and_content_sliding_constraintLayout1"
        app:layout_constraintLeft_toRightOf="@+id/image_and_content_sliding_constraintLayout1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/image_and_sliding_content_userNameLabel_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/image_and_sliding_content_userNameLabel_textView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/image_and_sliding_content_userName_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/image_and_sliding_content_userName_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/image_and_sliding_content_userName_textView"
            android:textColor="@color/orange"
            app:layout_constraintBaseline_toBaselineOf="@+id/image_and_sliding_content_userNameLabel_textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/image_and_sliding_content_userNameLabel_textView"/>
        <TextView
            android:id="@+id/image_and_sliding_content_bloodGroupLabel_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/image_and_sliding_content_bloodGroupLabel_textView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/image_and_sliding_content_bloodGroup_textView"
            app:layout_constraintTop_toBottomOf="@+id/image_and_sliding_content_userName_textView" />

        <TextView
            android:id="@+id/image_and_sliding_content_bloodGroup_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/image_and_sliding_content_bloodGroup_textView"
            android:textColor="@color/orange"
            app:layout_constraintBaseline_toBaselineOf="@id/image_and_sliding_content_bloodGroupLabel_textView"
            app:layout_constraintLeft_toRightOf="@+id/image_and_sliding_content_bloodGroupLabel_textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_and_sliding_content_userName_textView"/>

        <TextView
            android:id="@+id/image_and_sliding_content_districtLabel_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/image_and_sliding_content_districtLabel_textView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/image_and_sliding_content_district_textView"
            app:layout_constraintTop_toBottomOf="@+id/image_and_sliding_content_bloodGroup_textView" />

        <TextView
            android:id="@+id/image_and_sliding_content_district_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/image_and_sliding_content_district_textView"
            android:textColor="@color/orange"
            app:layout_constraintBaseline_toBaselineOf="@+id/image_and_sliding_content_districtLabel_textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/image_and_sliding_content_districtLabel_textView"
            app:layout_constraintTop_toBottomOf="@+id/image_and_sliding_content_bloodGroup_textView" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>